--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gulp-autoprefixer": "^2.3.0",
     "gulp-concat": "^2.5.2",
     "gulp-imagemin": "^2.2.1",
+    "gulp-minify-css": "^1.1.4",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.1",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "gulp-uncss": "^1.0.1"
   }
 }
